--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="no_content">Nothing found to display</string>
     <string name="settings_menu_item">Settings</string>
     <string name="settings_title">News Settings</string>
+
+    <string name="settings_search_term_label">Search Term</string>
+    <string name="settings_search_term_key" translatable="false">search_term</string>
+    <string name="settings_search_term_default" translatable="false">Nevada</string>
 </resources>
